[IMP] hr_contract: avoid screen shaking
On a contract view, if you hover the warning of a calendar mismatch,
the appearing warning text may lengthen the page, adding a scrollbar and
modifying the overhaul layout of the page on the chrome browser.
This commit keeps the text visible anyway so that no changes can cause
that screenshake.

Visual of the error:
https://watch.screencastify.com/v/MGPnCksg2eW49b7CoZc5

taskID 2878189

closes odoo/odoo#93161

--- a/addons/hr_contract/static/src/scss/calendar_mismatch.scss
+++ b/addons/hr_contract/static/src/scss/calendar_mismatch.scss
@@ -2,18 +2,4 @@
     .o_calendar_warning {
         cursor: help;
     }
-
-    .o_calendar_warning_tooltip {
-        display: block;
-        height: 0;
-        opacity: 0;
-        pointer-events: none;
-    }
-
-    .o_calendar_warning:hover + .o_calendar_warning_tooltip {
-        display: inline;
-        height: auto;
-        opacity: 1;
-        transition: opacity 0.5s linear;
-    }
 }
